--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,12 @@ html
     title= title
     link(rel="stylesheet" href="/stylesheets/style.css")
     link(rel="stylesheet" href="/bootstrap/css/bootstrap.min.css")
+    link(rel="stylesheet" href="/fontawesome/css/all.css")
     script(src='/jquery/jquery.min.js')
     script(src='/@popperjs/popper.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/fontawesome/js/all.js')
+    script(src='/javascripts/chataddtest.js')
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       a.navbar-brand(href='#') Navbar
@@ -23,14 +26,14 @@ html
               span.sr-only (current)
           |       
           li.nav-item
-            a.nav-link(href='#') Link
+            a.nav-link(id="pressthis" href='#') Link
           |       
           li.nav-item.dropdown
             a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               | Dropdown
             |         
             .dropdown-menu(aria-labelledby='navbarDropdown')
-              a.dropdown-item(href='#') Action
+              a.dropdown-item(type='button', data-toggle='modal', data-target='#modallogin') Login
               |           
               a.dropdown-item(href='#') Another action
               |           
@@ -40,9 +43,13 @@ html
           |       
           li.nav-item
             a.nav-link.disabled(href='#' tabindex='-1' aria-disabled='true') Disabled
+          
+          li.nav-item
+            i.fab.fa-twitch
         |     
         form.form-inline.my-2.my-lg-0
           input.form-control.mr-sm-2(type='search' placeholder='Search' aria-label='Search')
           |       
           button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
+          
     block content
